# c-util

./: CMakeLists.txt  LICENCE  Makefile  README.md  strutil.c  strutil.h  test-cxx.cc  test-main.c  vlenc.c
doc/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  strutil.c  strutil.h  vlenc.h
test/: CMakeLists.txt  test-cxx.cc  test-main.c
